Update index.html, style.css and script.js

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section id="toggle-section">
       <span id="dark-mode">Dark Mode</span>
       <label id="toggle">
-        <input type="checkbox" id="checkbox" onclick="themeFunction()" />
+        <input type="checkbox" id="checkBox" onclick="themeFunction()" />
         <span class="slider"></span>
       </label>
     </section>
